--- a/index.html
+++ b/index.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>React.js Skill</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> 
 </head>
 <body>
-    <img src="./asset/2.2.jpg" width="200px" height="200px">
-    <h1>Gajjaly Hasan</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates asperiores nesciunt, tempore velit deleniti mollitia nisi modi necessitatibus dolores ex tenetur nostrum fugiat accusantium! Quas accusamus animi sed corporis quibusdam.</p>
+    <header>
+        <div class="container">
+            <div class="row">
+                <nav class="navbar navbar-expand-md navbar-light bg-light">
+                    <a class="navbar-brand" href="#">Hasan</a>
+                    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavId">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <img src="./asset/2.2.jpg" alt="my photo" srcset="">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut, iusto cumque voluptate illum adipisci repellat vitae laborum rerum sint neque quidem illo maxime at possimus nemo. Quasi alias expedita deleniti?</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
